# n-body_simulation

./: README.md  input.txt  shell_script  spacebodies.c
clion/: CMakeLists.txt  main.cpp
